// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly 1`] = `
<button
  className="btn btn-default"
  disabled={false}
  onTouchTap={[Function]}
>
  text
</button>
`;

exports[`rendering renders correctly disabled button 1`] = `
<button
  className="btn btn-default"
  disabled={true}
  onTouchTap={[Function]}
>
  text
</button>
`;
